--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-adaptors==0.2.5
 django-filter==2.2.0
 django-rest-swagger==2.2.0
 djangorestframework==3.10.3
+gunicorn==19.9.0
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10.3
@@ -15,6 +16,7 @@ MarkupSafe==1.1.1
 numpy==1.17.3
 openapi-codec==1.3.2
 pandas==0.24.2
+pkg-resources==0.0.0
 python-dateutil==2.8.0
 pytz==2019.3
 PyYAML==5.1.2
@@ -24,3 +26,4 @@ six==1.12.0
 sqlparse==0.3.0
 uritemplate==3.0.0
 urllib3==1.25.6
+whitenoise==4.1.4
