--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ certifi==2019.9.11
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==0.5.0
 Django==2.2.6
 django-adaptors==0.2.5
 django-filter==2.2.0
+django-heroku==0.3.1
 django-rest-swagger==2.2.0
 djangorestframework==3.10.3
 gunicorn==19.9.0
@@ -16,6 +18,7 @@ MarkupSafe==1.1.1
 numpy==1.17.3
 openapi-codec==1.3.2
 pandas==0.24.2
+psycopg2==2.8.4
 python-dateutil==2.8.0
 pytz==2019.3
 PyYAML==5.1.2
